Added LodePNG and tweaked makefiles

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,16 +6,22 @@ CCFLAGS = -std=c++11
 BIN = bin
 BUILD = build
 SRC = src
-INC = inc
+INC = include
 
 CPP_FILES := $(wildcard $(SRC)/*.cpp)
 OBJ_FILES := $(addprefix $(BUILD)/,$(notdir $(CPP_FILES:.cpp=.o)))
 
-$(BIN)/ImageProcessorTest: $(OBJ_FILES)
+$(BIN)/ImageProcessorTest: $(OBJ_FILES) build/pixel.o build/image.o build/lodepng.o
 	$(CC) $(CCFLAGS) -o $@ $^
 
 $(BUILD)/%.o: $(SRC)/%.cpp
-	$(CC) $(CCFLAGS) -I ../include -I ../src -c $< -o $@
+	$(CC) $(CCFLAGS) -I ../$(INC) -I ../src -c $< -o $@
+
+$(BUILD)/%.o: ../src/%.cpp
+	$(CC) $(CCFLAGS) -I ../$(INC) -c $< -o $@
+
+$(BUILD)/lodepng.o:
+	$(CC) $(CCFLAGS) -c ../$(INC)/lodepng.cpp -o $(BUILD)/lodepng.o
 
 run:
 	cd bin; ./ImageProcessorTest
